# opengl_ex

./: CMakeLists.txt  CMakeSettings.json  README.md
include/glad/: gl.h
src/: CMakeLists.txt  camera.h  main.cpp  shader.h  stb_image.h.gch
